# zero-arsenal

./: .env.example  .gitignore  GAP_ANALYSIS.md  LICENSE  README.md  TEST_REPORT.md  _t.json  pytest.ini  test_llm_real.py  tmp_check.txt  tmp_lines.txt  tmp_tail.txt  tmp_verify.txt
backend/: __init__.py  main.py  pyproject.toml  timeouts.py
backend/agents/: __init__.py  agent_node.py  agent_span.py  ask_handler.py  cancellation.py  chronicler_agent.py  compaction.py  dice_node.py  dm_agent.py  external_agent.py  graph.py  llm.py  narrator_agent.py  npc_agent.py  permission.py  research_agent.py  rules_agent.py  state.py  style_agent.py  tool_loop.py  var_agent.py  world_agent.py
backend/api/: routes.py
backend/bus/: __init__.py  event_bus.py  event_types.py  interface.py  redis_bus.py  sse_adapter.py
backend/db/: __init__.py  audit.py  character_v4.py  connection.py  memory_entry.py  queries.py  schema.py
backend/engine/: __init__.py  combat.py  dice.py  grant_parser.py  prompt_assembler.py  psyche.py  runtime_data_stream.py  vm.py
backend/extensions/: __init__.py  __registry__.json  extension_loader.py  hook_protocol.py  plugin.py  registry_builder.py  rules_loader.py
backend/hooks/: __init__.py  builtin_hooks.py  hook_manager.py
backend/memory/: __init__.py  adapter.py  chapter_consolidator.py  consolidator.py  engine.py  extract_queue.py  extractor.py  graph.py  retriever.py  rollback.py  schema.py  vector.py
backend/prompts/: __init__.py  core_prompts.py  registry.py  template_loader.py  token_budget.py
backend/skills/: watcher.py  (+1 more)
docs/: 开发须知.md  (+9 more)
(+313 files in other folders)
