[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zero-arsenal-backend"
version = "0.1.0"
description = "零度武库 AI 跑团小说工具后端"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Agent 编排
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # LLM 网关
    "litellm>=1.50.0",
    # 数据库
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # 记忆子系统
    "sentence-transformers>=3.0.0",
    "networkx>=3.3",
    "jieba>=0.42.1",
    # 变量执行
    "RestrictedPython>=7.0",
    # 工具
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "stub: 占位/静态源码检查/失败不退出的伪测试，不验证运行时行为；CI 用 `-m \"not stub\"` 排除",
]
